fix(style): fix bc-select list cutoff on small screens
fixes busybusy/webapp-busy-time#1218

--- a/app/styles/components/bc-select.scss
+++ b/app/styles/components/bc-select.scss
@@ -251,7 +251,7 @@ $off-white: #f5f5f5;
 		&.small {
 			& > .list-container {
 				& > .select-container {
-					width: calc(100vw - 20px);
+					width: calc(100vw - 60px);
 					left: initial;
 					right: 0;
 				}
